err/pyeval.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyeval'...
Compiling './lib/python3.5/site-packages/pyeval/autoimporter.py'...
***   File "./lib/python3.5/site-packages/pyeval/autoimporter.py", line 76
    except AttributeError, outerError:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyeval/doc'...
Compiling './lib/python3.5/site-packages/pyeval/help.py'...
***   File "./lib/python3.5/site-packages/pyeval/help.py", line 46
    print self.getTopicText(topicname)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyeval/indentation.py'...
***   File "./lib/python3.5/site-packages/pyeval/indentation.py", line 17
    assert indented == '' or indented[:indent].strip() == '', `indented`
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyeval/magic'...
Compiling './lib/python3.5/site-packages/pyeval/magic/functions.py'...
***   File "./lib/python3.5/site-packages/pyeval/magic/functions.py", line 58
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyeval/tests'...
Compiling './lib/python3.5/site-packages/pyeval/tests/test_help.py'...
***   File "./lib/python3.5/site-packages/pyeval/tests/test_help.py", line 101
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyeval-0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
